@@ -20,9 +20,8 @@
 # directory.
 GNUSTEP_DEFAULT_PREFIX=~
 
-# These are only used by gnustep-base to implement the NSUserDirectory
-# API.  We never install anything in them.  They will be used as they
-# are without $prefix.
+# These are only used to implement the NSUserDirectory API.
+# They are used literall, without the default prefix.
 GNUSTEP_SYSTEM_USERS_DIR=/home
 GNUSTEP_NETWORK_USERS_DIR=/home
 GNUSTEP_LOCAL_USERS_DIR=/home
@@ -67,16 +66,17 @@ GNUSTEP_LOCAL_DOC=./Documentation
 GNUSTEP_LOCAL_DOC_MAN=./man
 GNUSTEP_LOCAL_DOC_INFO=./info
 
-GNUSTEP_USER_DIR_APPS=GNUstep/Applications
-GNUSTEP_USER_DIR_ADMIN_APPS=GNUstep/Applications/Admin
-GNUSTEP_USER_DIR_WEB_APPS=GNUstep/WebApplications
-GNUSTEP_USER_DIR_TOOLS=GNUstep/Tools
-GNUSTEP_USER_DIR_ADMIN_TOOLS=GNUstep/Tools/Admin
-GNUSTEP_USER_DIR_LIBRARY=GNUstep/Library
-GNUSTEP_USER_DIR_HEADERS=GNUstep/Library/Headers
-GNUSTEP_USER_DIR_LIBRARIES=GNUstep/Library/Libraries
-GNUSTEP_USER_DIR_DOC=GNUstep/Library/Documentation
-GNUSTEP_USER_DIR_DOC_MAN=GNUstep/Library/Documentation/man
-GNUSTEP_USER_DIR_DOC_INFO=GNUstep/Library/Documentation/info
+GNUSTEP_USER_DIR_APPS=.GNUstep/Applications
+GNUSTEP_USER_DIR_ADMIN_APPS=.GNUstep/Applications/Admin
+GNUSTEP_USER_DIR_WEB_APPS=.GNUstep/WebApplications
+GNUSTEP_USER_DIR_TOOLS=.GNUstep/Tools
+GNUSTEP_USER_DIR_ADMIN_TOOLS=.GNUstep/Tools/Admin
+GNUSTEP_USER_DIR_LIBRARY=.GNUstep/Library
+GNUSTEP_USER_DIR_HEADERS=.GNUstep/Library/Headers
+GNUSTEP_USER_DIR_LIBRARIES=.GNUstep/Library/Libraries
+GNUSTEP_USER_DIR_DOC=.GNUstep/Library/Documentation
+GNUSTEP_USER_DIR_DOC_MAN=.GNUstep/Library/Documentation/man
+GNUSTEP_USER_DIR_DOC_INFO=.GNUstep/Library/Documentation/info
+
 GNUSTEP_USER_CONFIG_FILE=.GNUstep.conf
-GNUSTEP_USER_DEFAULTS_DIR=GNUstep/Defaults
+GNUSTEP_USER_DEFAULTS_DIR=.GNUstep/Defaults
